<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="DUT_BeltLineFixture" Id="{5764a958-9645-4800-8369-a1effa6019e9}">
    <Declaration><![CDATA[TYPE DUT_BeltLineFixture :
STRUCT
 	xMaterialOnOff : BOOL ;
  stProduct : DUT_PartStatus_1 ;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>