<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <DUT Name="DUT_PartStatus_1" Id="{d695cfb9-cd17-4a1a-b640-19f2edcd55bb}">
    <Declaration><![CDATA[TYPE DUT_PartStatus_1 :
STRUCT
	xALL_OK : 	BOOL ; //总的OK
	xPart_Normal :BOOL;//产品正常
	xPart_NG	:BOOL;	//其中有NG
	xCardLoading_OK :BOOL ;
	xCardLoading_NOK :BOOL;
	xBoxLoading_OK: BOOL ;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>