<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.9">
  <POU Name="S10_BeltCarrying" Id="{f14c7987-78b0-43f4-9505-460a33d7d0cf}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM S10_BeltCarrying
VAR
	//工站
	station					: REFERENCE TO FB_Station:=fbstation[10];
	//气缸
	
	//伺服
	fbROTAxisMove	 :REFERENCE TO FB_Axis:=fbAxis[16];	//	出料线体伺服
	
	//延时
	arTonDelay :ARRAY[1..20] OF TON;
	//返回值
	UdiReturnValue :ARRAY[1..20] OF UDINT;
	//过程记录
	tsModuleProcess:ARRAY[1..gc_ModuleProNo] OF DUT_Process;
	xClearModuleProcessDone:BOOL;
	bClearProcessStep	:BYTE;
	i: INT;

	 //报警屏蔽
	_AlarmDisable: BOOL;
	//首次循环
	_FirstCycle: ARRAY[1..10]OF BOOL;
	// //入料允许
	xBeltMovingEnable: BOOL;
	wActionCalibration: WORD;
	// 起始位置
	rStartPoition: REAL;
	// 结束位置
	rEndPoition: REAL;
	NextPosR_TRIG: R_TRIG;
	tes: REAL;
	// 深孔板检测传感器
	xBoxSensorReached: ARRAY[1..2] of BOOL;
	xNotStop: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[A_Input();
Alarm();
Delay();
FlowAuto();
FlowInit();
General();
ILC();
TipAuto();
TipManual();
Z_Output();]]></ST>
    </Implementation>
    <Action Name="A_Input" Id="{5549612f-f835-4cac-8e2f-81ddd47e4429}">
      <Implementation>
        <ST><![CDATA[//气缸
//传感器
xBoxSensorReached[1]:=IxBeltEntryBoxCheckSensor1	;//	皮带线入口处¶深孔板检测传感器1
xBoxSensorReached[2]:=IxBeltEntryBoxCheckSensor2	;//	皮带线入口处¶深孔板检测传感器2

//允许进料
xBeltMovingEnable:=sModbus_200SMART.iBeltEnterEnable =1;
  



]]></ST>
      </Implementation>
    </Action>
    <Action Name="Alarm" Id="{f100fef2-7bd1-4fe4-a530-9448d1f71b42}">
      <Implementation>
        <ST><![CDATA[//
station.adwAlarm[1].00:=station.xInitTimeout;	  			//S09CardCarrying 初始化超时
]]></ST>
      </Implementation>
    </Action>
    <Action Name="Delay" Id="{3e6d0638-113c-4b73-a71d-99982a90a940}">
      <Implementation>
        <ST><![CDATA[arTonDelay[01](IN:= , PT:=T#0.1S , Q=> , ET=> );
(*arTonDelay[02](IN:=  , PT:=T#1S , Q=> , ET=> );*)//已被使用
arTonDelay[03](IN:=   , PT:=T#1S , Q=> , ET=> );
arTonDelay[04](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[05](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[06](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[07](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[08](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[09](IN:= , PT:=T#0.1S , Q=> , ET=> );
arTonDelay[10](IN:= NOT fbROTAxisMove.xbusy , PT:=T#0.1S , Q=> , ET=> );//TipAuto使用
















]]></ST>
      </Implementation>
    </Action>
    <Action Name="FlowAuto" Id="{150835d7-b6d9-4f7e-b17a-65598f78bf7a}">
      <Implementation>
        <ST><![CDATA[
//-----------------------------------------初始化是否完成判断----------------------------------------------
IF NOT station.xInitDone 
THEN
 	station.iStepAuto:=0;
 	station.xDone:=FALSE;
ELSIF station.xRunning   OR (tsModuleProcess[1].xProcessStarted AND NOT tsModuleProcess[1].xProcessCompleted)
THEN
//-----------------------------------------动作步骤--------------------------------------------------------
CASE station.iStepAuto OF	  
	0: //----Home Step，等待启动----
		IF station.xDisabled 
			AND station.xCanRun 
			AND NOT fbMachine[1].xStopped 
			AND NOT station.xSingleRunning 
		THEN
			station.xDone:=TRUE;
		END_IF
		
		IF  station.xSingleRunning 
			OR station.xCanRun 
			AND NOT station.xDone 
			AND NOT station.xDisabled 
			AND NOT fbMachine[1].xStopped
		THEN
			station.xCycleEnable:=TRUE;
			//station.xDone:= FALSE;  
			
			station.iStepAuto:= 10;
		END_IF
    10: //复位数据 
			IF  station.xSingleRunning THEN
				 FOR i:=1 TO gc_ModuleProNo BY 1 DO
						 MEMSET(ADR(tsModuleProcess[i]),0,SIZEOF(tsModuleProcess[i]));
				 END_FOR
			END_IF
			station.iStepAuto:=15;
	15://等待工位完成信号
		IF  NOT  fbMachine[1].xTryRun AND  NOT station.xSingleRunning THEN 
			IF  S07_BoxCarrying.station.xDone  AND 
				S09_CardCarrying.station.xDone AND xBoxSensorReached[1] AND  xBoxSensorReached[2] THEN
					station.iStepAuto:=20;
			END_IF
		ELSE
		 			station.iStepAuto:=25;
		END_IF
		
	20://等待热缩封膜机允许入料
		IF  NOT station.xSingleRunning  THEN
				 IF  arBeltLineFixtureData[5].xMaterialOnOff AND 
						 arBeltLineFixtureData[6].xMaterialOnOff THEN  
								IF  xBeltMovingEnable AND 
										arBeltLineFixtureData[5].stProduct.xCardLoading_OK AND 
										 arBeltLineFixtureData[5].stProduct.xBoxLoading_OK	 THEN
									station.iStepAuto:=25;
								END_IF
				 ELSE
						 station.iStepAuto:=25;
				 END_IF
		ELSE
		 		 station.iStepAuto:=25;
		END_IF
	25://不允许各工位放料
				station.xDone :=FALSE;
				station.iStepAuto:=80;	   
	80://伺服电机给定jog速度
				tsModuleProcess[1].xProcessNotStarted:=TRUE;
			 stData.Axis[16].rJogVelocity :=10;  
			 rStartPoition:=fbROTAxisMove.rActPos;
				station.iStepAuto:=90;
	90:  //jog到接近点
			tsModuleProcess[1].xProcessStarted:=TRUE;
			IF  fbMachine[1].xAutoMode THEN
				fbROTAxisMove.xJogForwardAuto := TRUE ;
			ELSE
			 	fbROTAxisMove.xJogForwardHmi:=TRUE;
			 END_IF 
			 station.iStepAuto:=91; 
	91://检查jog的距离
			 IF	fbROTAxisMove.rActPos>(rStartPoition+46*2) THEN 
						fbROTAxisMove.xJogForwardAuto := FALSE ; 
						fbROTAxisMove.xJogForwardHmi := FALSE ; 
					  stData.Axis[16].rJogVelocity :=1; 
						station.iStepAuto:=95; 
			 END_IF
	95://
				IF  fbMachine[1].xAutoMode THEN
				fbROTAxisMove.xJogForwardAuto := TRUE ;
			ELSE
			 	fbROTAxisMove.xJogForwardHmi:=TRUE;
			 END_IF 
			 	station.iStepAuto:=100; 	
	100://jog到目标点
				IF    arAxisSensorH[16] THEN
				  	fbROTAxisMove.xJogForwardAuto := FALSE ; 
						fbROTAxisMove.xJogForwardHmi := FALSE ; 
						station.iStepAuto:=110; 
				END_IF			
				 tsModuleProcess[1].xProcessCompleted:=TRUE;
	110://数据传递
			tsModuleProcess[1].xProcessCompleted:=TRUE;
			 station.iStepAuto:=160;
	160://启动各个工位
				IF   S07_BoxCarrying.xBeltLineControl THEN
			 		fbStation[7].xDone:=FALSE;
				END_IF
			fbStation[9].xDone:=FALSE;
	
			station.iStepAuto:=500;	
	500://清除本站过程记录
			FOR i:=1 TO gc_ModuleProNo BY 1 DO
				MEMSET(ADR(tsModuleProcess[i]),0,SIZEOF(tsModuleProcess[i]));
			END_FOR
			 station.iStepAuto:=999;
			
	999://----Single Run Finish----
		station.iStepAuto :=0;
		IF NOT station.xSingleContinuousRun THEN
			station.xSingleRunFlag:=FALSE;
		END_IF
		station.xCycleEnable:=FALSE;	
		(*station.xDone:=TRUE;*)
	ELSE
		;	
END_CASE
END_IF]]></ST>
      </Implementation>
    </Action>
    <Action Name="FlowInit" Id="{8c3c079e-1f18-47e9-9b8f-ac261d5376ea}">
      <Implementation>
        <ST><![CDATA[IF NOT station.xIniting THEN
  station.iStepInit:=0;    
ELSE
//--------------------------------------------初始化步序----------------------------------
CASE station.iStepInit OF	
 0://  
  	IF station.xIniting THEN	
  	  station.iStepInit:=10;	
  	END_IF	
10://复位数据
	station.iStepInit:=20;
20://伺服上电
	fbROTAxisMove.xPowerInit :=TRUE;
	IF  fbROTAxisMove.xPowerOn THEN
			station.iStepInit:=30;
	END_IF
30: //伺服回原点
	fbROTAxisMove.xReferenceAuto := TRUE ;
	station.iStepInit:=40;
40://伺服回原点完成
	IF  fbAxisHome[16].home_done THEN 
		 fbROTAxisMove.xReferenceAuto  := FALSE ;
		 station.iStepInit:=50;  
	END_IF
50: //再次伺服回原点，保证位置
	fbROTAxisMove.xReferenceAuto := TRUE ;
	station.iStepInit:=60;
60://伺服回原点完成
	IF  fbAxisHome[16].home_done THEN 
		 fbROTAxisMove.xReferenceAuto  := FALSE ;
		 station.iStepInit:=70;  
	END_IF	
70://伺服去待机点
	fbROTAxisMove.xMoveAuto[1]:=TRUE;
	IF  fbROTAxisMove.xMoveInPos[1] THEN
		 station.iStepInit:=999; 
	END_IF
999://初始化完成	
	station.iStepInit:=0;
	station.xInitDone:=TRUE;  
END_CASE
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="General" Id="{0cae7ce3-2c84-4098-b25b-44511bfb9f95}">
      <Implementation>
        <ST><![CDATA[(*********************************************计算环形线周长程序********************************************************************************)
CASE wActionCalibration OF   
  10://回原点
  fbROTAxisMove.xReferenceAuto:= TRUE ;
  	wActionCalibration:=15;
  15:
	 IF  fbAxisHome[16].home_done THEN 
		 fbROTAxisMove.xReferenceAuto  := FALSE ;
		wActionCalibration:=100;
	 END_IF
  20://Jog正向，遇到原点传感器停止
   stData.Axis[16].rJogVelocity :=0.1;  
	fbROTAxisMove.xJogForwardAuto := TRUE ;
	 IF  arAxisSensorH[16] THEN 
		 fbROTAxisMove.xJogForwardAuto := FALSE ; 
			wActionCalibration:=30;
			rStartPoition:=fbROTAxisMove.rActPos;
	 END_IF 
  60: //高速走定位，理论值前10MM处停止
	stData.Axis[16].rMovePosition[5] :=(755*5)-10; 
	wActionCalibration:=70;
	
70:
	fbROTAxisMove.xMoveAuto[5] := TRUE ;
	 IF fbROTAxisMove.xMoveInPos[5] THEN 
	 fbROTAxisMove.xMoveAuto[5] := FALSE ; 
	 wActionCalibration:=80;
	 END_IF 
80:
	  stData.Axis[16].rJogVelocity :=0.1;  
	fbROTAxisMove.xJogForwardAuto := TRUE ;
 IF   arAxisSensorH[16] THEN 
	 fbROTAxisMove.xJogForwardAuto := FALSE ; 
 		wActionCalibration:=90;
		rEndPoition:=fbROTAxisMove.rActPos;
 END_IF 
90:
	stData.Axis[16].rRelativeDistance:=((rEndPoition-rStartPoition)/85);
		wActionCalibration:=0;
END_CASE    

//////去下一个位置
NextPosR_TRIG(CLK:= fbMachine[1].xManualMode AND fbROTAxisMove.xMoveHmi[6], Q=> );
IF  NextPosR_TRIG.Q THEN
 stData.Axis[16].rMovePosition[6]:=fbROTAxisMove.rActPos +fbROTAxisMove.rRelativeDistance;
END_IF

tes:=((rEndPoition-rStartPoition)/80);]]></ST>
      </Implementation>
    </Action>
    <Action Name="ILC" Id="{92fad71f-f937-4458-b440-4469ed850f69}">
      <Implementation>
        <ST><![CDATA[
//---------------------------------------------------工站可执行-------------------------------------------------------
station.xCanRun :=TRUE ;

//---------------------------------------------------气缸动作条件-------------------------------------------



//---------------------------------------------------伺服动作条件-------------------------------------------



fbROTAxisMove.xRunILC := 
fbROTAxisMove.xMoveILC[1] :=
fbROTAxisMove.xMoveILC[2] :=
fbROTAxisMove.xMoveILC[3] :=
fbROTAxisMove.xMoveILC[4] :=
fbROTAxisMove.xMoveILC[5] := TRUE ;

]]></ST>
      </Implementation>
    </Action>
    <Action Name="TipAuto" Id="{7d0b378b-5f23-4601-b0e9-fba22d16cc5e}">
      <Implementation>
        <ST><![CDATA[
//------------------------------------------------AutoTip Cylinder--------------------------------
//------------------------------------------------AutoTip Servo--------------------------------
//**************************************
FOR i:= 1 TO 5 BY 1 DO 
	IF fbROTAxisMove.xMoveAuto[i] THEN
		fbROTAxisMove.iPosNumber := i ;
	END_IF
	
END_FOR


IF  fbMachine[1].xAutoMode AND NOT fbMachine[1].xRunning AND arTonDelay[10].Q   THEN
	IF	fbROTAxisMove.iPosNumber=1 	AND NOT fbROTAxisMove.xMoveInPos[1] 	THEN 	station.adwAutoTip[1].10:=TRUE	;	END_IF//轴伺服自动时位置不在位置1
	if	fbROTAxisMove.iPosNumber=2	AND NOT fbROTAxisMove.xMoveInPos[2]	THEN 	station.adwAutoTip[1].11:=TRUE	;	END_IF//轴伺服自动时位置不在位置2
	if	fbROTAxisMove.iPosNumber=3	AND NOT fbROTAxisMove.xMoveInPos[3]	THEN 	station.adwAutoTip[1].12:=TRUE	;	END_IF//轴伺服自动时位置不在位置3
	if	fbROTAxisMove.iPosNumber=4	AND NOT fbROTAxisMove.xMoveInPos[4]	THEN 	station.adwAutoTip[1].13:=TRUE	;	END_IF//轴伺服自动时位置不在位置4
	IF	fbROTAxisMove.iPosNumber=5	AND NOT fbROTAxisMove.xMoveInPos[5]	THEN 	station.adwAutoTip[1].14:=TRUE	;	END_IF//轴伺服自动时位置不在位置5
END_IF
]]></ST>
      </Implementation>
    </Action>
    <Action Name="TipManual" Id="{234546c3-9ee4-4897-926f-08de62e253ec}">
      <Implementation>
        <ST><![CDATA[//--------------------------------------------ManualTip------------------------------------------------------

//-------------------------------------------气缸提示---------------------------------------------------------




/////////////////////////////////////////////////////////////////////////////////////////////////////////////////
]]></ST>
      </Implementation>
    </Action>
    <Action Name="Z_Output" Id="{580bf8d9-96ef-467f-a5e7-158e7bf5ab7c}">
      <Implementation>
        <ST><![CDATA[(**************************气缸输出********************************)

			]]></ST>
      </Implementation>
    </Action>
    <LineIds Name="S10_BeltCarrying">
      <LineId Id="32" Count="8" />
      <LineId Id="5" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.A_Input">
      <LineId Id="28" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="80" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="40" Count="1" />
      <LineId Id="79" Count="0" />
      <LineId Id="10" Count="3" />
      <LineId Id="8" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.Alarm">
      <LineId Id="176" Count="1" />
      <LineId Id="266" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.Delay">
      <LineId Id="64" Count="7" />
      <LineId Id="75" Count="0" />
      <LineId Id="72" Count="2" />
      <LineId Id="44" Count="13" />
      <LineId Id="40" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.FlowAuto">
      <LineId Id="1155" Count="10" />
      <LineId Id="1167" Count="15" />
      <LineId Id="1452" Count="0" />
      <LineId Id="1183" Count="1" />
      <LineId Id="1256" Count="0" />
      <LineId Id="1956" Count="3" />
      <LineId Id="1955" Count="0" />
      <LineId Id="1259" Count="0" />
      <LineId Id="1784" Count="0" />
      <LineId Id="2002" Count="0" />
      <LineId Id="1785" Count="0" />
      <LineId Id="1947" Count="0" />
      <LineId Id="1788" Count="0" />
      <LineId Id="1787" Count="0" />
      <LineId Id="2003" Count="3" />
      <LineId Id="1950" Count="0" />
      <LineId Id="2042" Count="0" />
      <LineId Id="1960" Count="0" />
      <LineId Id="1964" Count="0" />
      <LineId Id="1952" Count="0" />
      <LineId Id="1968" Count="0" />
      <LineId Id="1967" Count="0" />
      <LineId Id="1953" Count="1" />
      <LineId Id="1965" Count="1" />
      <LineId Id="1963" Count="0" />
      <LineId Id="2043" Count="2" />
      <LineId Id="1936" Count="0" />
      <LineId Id="1943" Count="0" />
      <LineId Id="1946" Count="0" />
      <LineId Id="1969" Count="0" />
      <LineId Id="2033" Count="0" />
      <LineId Id="1972" Count="0" />
      <LineId Id="1974" Count="0" />
      <LineId Id="1970" Count="0" />
      <LineId Id="1834" Count="0" />
      <LineId Id="2034" Count="0" />
      <LineId Id="2007" Count="0" />
      <LineId Id="1975" Count="0" />
      <LineId Id="2008" Count="2" />
      <LineId Id="2023" Count="0" />
      <LineId Id="2022" Count="0" />
      <LineId Id="1973" Count="0" />
      <LineId Id="2013" Count="1" />
      <LineId Id="1984" Count="0" />
      <LineId Id="2012" Count="0" />
      <LineId Id="1981" Count="0" />
      <LineId Id="2015" Count="0" />
      <LineId Id="2017" Count="3" />
      <LineId Id="2016" Count="0" />
      <LineId Id="2021" Count="0" />
      <LineId Id="1992" Count="2" />
      <LineId Id="2011" Count="0" />
      <LineId Id="1996" Count="0" />
      <LineId Id="1995" Count="0" />
      <LineId Id="1840" Count="0" />
      <LineId Id="1843" Count="0" />
      <LineId Id="1848" Count="1" />
      <LineId Id="1909" Count="0" />
      <LineId Id="2031" Count="1" />
      <LineId Id="1901" Count="0" />
      <LineId Id="1949" Count="0" />
      <LineId Id="2026" Count="0" />
      <LineId Id="1904" Count="4" />
      <LineId Id="1777" Count="1" />
      <LineId Id="1212" Count="0" />
      <LineId Id="1214" Count="0" />
      <LineId Id="1453" Count="2" />
      <LineId Id="1216" Count="4" />
      <LineId Id="1224" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.FlowInit">
      <LineId Id="437" Count="9" />
      <LineId Id="467" Count="0" />
      <LineId Id="478" Count="0" />
      <LineId Id="553" Count="1" />
      <LineId Id="558" Count="0" />
      <LineId Id="556" Count="0" />
      <LineId Id="578" Count="6" />
      <LineId Id="567" Count="0" />
      <LineId Id="588" Count="6" />
      <LineId Id="585" Count="0" />
      <LineId Id="571" Count="2" />
      <LineId Id="577" Count="0" />
      <LineId Id="575" Count="0" />
      <LineId Id="462" Count="4" />
      <LineId Id="436" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.General">
      <LineId Id="382" Count="39" />
      <LineId Id="423" Count="4" />
      <LineId Id="422" Count="0" />
      <LineId Id="361" Count="0" />
      <LineId Id="381" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.ILC">
      <LineId Id="234" Count="4" />
      <LineId Id="313" Count="0" />
      <LineId Id="302" Count="0" />
      <LineId Id="307" Count="0" />
      <LineId Id="290" Count="0" />
      <LineId Id="244" Count="1" />
      <LineId Id="314" Count="5" />
      <LineId Id="252" Count="0" />
      <LineId Id="320" Count="0" />
      <LineId Id="274" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.TipAuto">
      <LineId Id="118" Count="0" />
      <LineId Id="141" Count="0" />
      <LineId Id="148" Count="5" />
      <LineId Id="187" Count="0" />
      <LineId Id="157" Count="3" />
      <LineId Id="208" Count="4" />
      <LineId Id="178" Count="0" />
      <LineId Id="183" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.TipManual">
      <LineId Id="137" Count="1" />
      <LineId Id="176" Count="0" />
      <LineId Id="262" Count="1" />
      <LineId Id="246" Count="0" />
      <LineId Id="156" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="41" Count="0" />
    </LineIds>
    <LineIds Name="S10_BeltCarrying.Z_Output">
      <LineId Id="2" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="35" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>